# ssteer-eval-aware

./: .gitignore  README.md  basharena_demo.py  compare_ablations.py  data  judge.py  justfile  pyproject.toml  ssteer.py  ssteer_v3.py  tmp_delete_log
.claude/: settings.local.json
data/: action_verbs.json  all_truncated_outputs.json  casual_social.json  code_questions.json  emotional_responses.json  explanations.json  formal_professional.json  instructions.json  narrative.json  opinions.json  questions.json  reasoning.json  true_facts.json
docs/: 2505.14617_Hawthorne_Effect_Reasoning_Models.md  2601.20164_whats_the_plan_metrics_implicit_planning_llms.md  2603.02237_chars_concept_heterogeneity_aware_representation_steering.md  AntiPaSTO_concepts.md  lit_review.md
docs/spec/: 2026-03-21_hawthorne_repro.md
report/: report.md
scripts/: asteer.py  compare_ablations.py  extract_examples.py
