[project]
name = "ssteer-hackathon"
version = "0.1.0"
description = "S-space steering for eval-awareness testing"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "baukit",
    "scikit-learn",
    "einops",
    "tyro",
    "tqdm",
    "loguru",
    "pandas",
    "tabulate",
    "huggingface-hub",
    "accelerate",
    "safetensors",
    "pyarrow",
    "matplotlib",
    "anthropic>=0.86.0",
    "python-dotenv>=1.2.2",
    "polars>=1.39.3",
    "repeng",
    "openai>=2.29.0",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" }
repeng = { git = "https://github.com/vgel/repeng.git" }
